--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,16 @@
+@import url("https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon:ital@0;1&display=swap");
+
 :root {
-  --background: #ffffff;
+  --background: #f5f5f5;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #f5f5f5;
     --foreground: #ededed;
   }
-}
+} */
 
 html,
 body {
@@ -29,14 +31,24 @@ body {
   padding: 0;
   margin: 0;
 }
+h1,
+h2 {
+  font-family: "IM Fell French Canon", serif;
+}
 
 a {
   color: inherit;
   text-decoration: none;
 }
+nav {
+  display: flex;
+  gap: 1rem;
+  padding: 48px;
+  font-family: var(--font-geist-mono);
+  color: #646464;
+  position: fixed;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  a:hover {
+    color: #000;
   }
 }
