--- a/src/app/css/work.css
+++ b/src/app/css/work.css
@@ -3,29 +3,79 @@
   display: flex;
   align-items: center;
 }
-
-.work_content {
+.work_item {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 64px;
-  max-width: 800px;
-  margin: 0 auto;
-
+  gap: 24px;
+  width: 100%;
   .headline {
+    text-align: center;
     display: flex;
     flex-direction: column;
     gap: 16px;
     max-width: 500px;
-    text-align: center;
     align-items: center;
   }
+}
+.work_content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  color: #414141;
+  line-height: 24px;
+  position: sticky;
+  top: 160px;
+  height: 1px;
+}
 
-  .label {
+.content_block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 4px;
+}
+
+.work_page {
+  display: grid;
+  grid-template-columns: 40% 1fr;
+  gap: 64px;
+  width: 1120px;
+  margin: 160px auto;
+}
+
+.work_images {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  max-width: 800px;
+  .image_block {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    &:first-of-type {
+      margin-top: 120px;
+    }
+  }
+  .work_media {
+    width: 100%;
+  }
+  .work_image {
+    width: 100%;
+    background-color: white;
+    border-radius: 12px;
+    object-fit: fill;
+  }
+  .work_video {
+    width: 100%;
+    background-color: white;
+    border-radius: 12px;
+  }
+  .work_media_caption {
     font-size: 14px;
-    line-height: 24px;
     letter-spacing: -0.01em;
-    color: #666;
+    color: #848484;
     font-family: var(--font-geist-mono);
   }
 }
