--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,13 +11,9 @@
     --foreground: #ededed;
   }
 } */
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html {
+  scroll-behavior: smooth;
 }
-
 body {
   color: var(--foreground);
   background: var(--background);
@@ -35,20 +31,36 @@ h1,
 h2 {
   font-family: "IM Fell French Canon", serif;
 }
-
+h1 {
+  font-size: 36px;
+}
+h2 {
+  font-size: 32px;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
 nav {
   display: flex;
-  gap: 1rem;
-  padding: 48px;
   font-family: var(--font-geist-mono);
   color: #646464;
   position: fixed;
+  top: 0px;
+  width: 100%;
+  justify-content: center;
 
   a:hover {
     color: #000;
+  }
+  .nav_links {
+    margin: 0 auto;
+    width: 1120px;
+    display: flex;
+    gap: 24px;
+    padding: 48px 0;
+    font-family: var(--font-geist-mono);
+    color: #646464;
+    align-items: center;
   }
 }
