Fixed project structure and added work links to home page

--- a/src/app/css/header.css
+++ b/src/app/css/header.css
@@ -27,3 +27,10 @@
   align-items: center;
   color: #646464;
 }
+.skillset {
+  margin-top: 40px;
+  display: flex;
+  gap: 4px;
+  width: 60%;
+  flex-wrap: wrap;
+}
