--- a/src/app/css/work.css
+++ b/src/app/css/work.css
@@ -1,14 +1,50 @@
 .work {
-  padding: 80px 0;
+  padding: 120px 0;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 .work_item {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 24px;
-  width: 100%;
+  width: 800px;
+  background-color: white;
+  border-radius: 24px;
+  padding: 40px 40px 0px 40px;
+  position: relative;
+  border: 1px solid #ececec;
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 24px;
+    background-color: #fafafa;
+    position: absolute;
+    left: 50px;
+    top: 0px;
+    transform: rotate(5deg);
+    border: 1px solid #ececec;
+    z-index: -1;
+    transition: all 0.3s cubic-bezier(0.57, -0.05, 0.56, 1.35);
+  }
+  &::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 20px;
+    border-radius: 24px;
+    background-color: #fafafa;
+    position: absolute;
+    left: -50px;
+    transform: rotate(-5deg);
+    border: 1px solid #ececec;
+    z-index: -1;
+    transition: all 0.3s cubic-bezier(0.57, -0.05, 0.56, 1.35);
+  }
   .headline {
     text-align: center;
     display: flex;
@@ -16,6 +52,29 @@
     gap: 16px;
     max-width: 500px;
     align-items: center;
+  }
+  .image_container {
+    width: 800px;
+    height: 500px;
+    overflow: hidden;
+    .image {
+      transform: translateY(100px);
+      transition: all 0.3s cubic-bezier(0.57, -0.05, 0.56, 1.35);
+    }
+  }
+}
+.work_item:hover {
+  &::after {
+    left: 0;
+    transform: rotate(0deg);
+  }
+  &::before {
+    left: 0;
+    top: 0;
+    transform: rotate(0deg);
+  }
+  .image {
+    transform: translateY(0px);
   }
 }
 .work_content {
