--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,9 +33,16 @@ h2 {
 }
 h1 {
   font-size: 36px;
+  color: var(--foreground);
 }
 h2 {
   font-size: 32px;
+  color: var(--foreground);
+}
+h3 {
+  font-weight: semi-bold;
+  font-size: 16px;
+  color: var(--foreground);
 }
 a {
   color: inherit;
@@ -49,6 +56,7 @@ nav {
   top: 0px;
   width: 100%;
   justify-content: center;
+  z-index: 100;
 
   a:hover {
     color: #000;
